--- a/src/components/NadeCard.css
+++ b/src/components/NadeCard.css
@@ -54,6 +54,7 @@
   border-radius: 2px;
   bottom: 5px;
   cursor: pointer;
+  margin: 0;
   opacity: 0;
   outline: none;
   padding: 0;
